--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,23 @@
 <div>
-    <nav class="navbar navbar-expand-lg navbar-dark px-4 justify-content-center">
-        <div class="nav navbar-nav">
-            <a class="nav-link px-2" [routerLink]="['/home']" routerLinkActive="active">['home']</a>
-            <a class="nav-link px-2" [routerLink]="['/projects']" routerLinkActive="active">['projects']</a>
-            <a class="nav-link px-2" [routerLink]="['/contact']" routerLinkActive="active">['contact']</a>
-          </div>
+    <nav class="navbar navbar-expand-sm navbar-dark px-4">
+        <a class="navbar-brand" href="#">
+            {{ "{ jacobstec.dev }" }}
+        </a>
+        <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link px-2" [routerLink]="['/home']" routerLinkActive="active">['home']</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2" [routerLink]="['/projects']" routerLinkActive="active">['projects']</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2" [routerLink]="['/contact']" routerLinkActive="active">['contact']</a>                    
+                </li>
+              </ul>
+        </div>
     </nav>
 </div>
